# ke-recv

./: ChangeLog  Makefile.am  Makefile.in  README  aclocal.m4  autogen.sh  configure  configure.ac
conf/: ke-recv-test.service  ke-recv.schemas  usbnetwork
debian/: changelog  control  copyright  init.d  ke-recv-init-script.old  ke-recv.init  ke-recv.install  ke-recv.service  ke-recv.upstart  postinst  rules
docs/: Makefile  mmc-states.dot  usb-host-states.dot
mmc-utils/: Makefile.am  Makefile.in  mmc-pre-unmount.c  mmc-unmount.c
po/: POTFILES.in  en_GB.po  ke-recv.pot
scripts/: Makefile.am  ke-recv.sh.in  mmc-rename.sh  osso-mmc-mount.sh.in  osso-mmc-umount.sh.in  osso-usb-mass-storage-disable.sh  osso-usb-mass-storage-is-used.sh  pcsuite-enable.sh
src/: Makefile.am  Makefile.in  camera.c  camera.h  events.c  events.h  exec-func.c  exec-func.h  fat-tools.c  fat-tools.h  fremantle-format-internal-memory-card.sh  fremantle-partition-internal-memory-card.sh  gui.c  gui.h  kbd-slide.c  kbd-slide.h  ke-recv-test.c  ke-recv.c  ke-recv.h  ke-recv.schemas  mmc-check.c  mmc-format.c  mmc-format.h  mmc-mount  mmc-rename.sh  osso-mmc-mount.sh  osso-mmc-umount.sh  osso-prepare-partition.sh  osso-update-mmc-label.sh  osso-usb-mass-storage-disable.sh  osso-usb-mass-storage-enable.sh  osso-usb-mass-storage-is-used.sh  pcsuite-disable.sh  pcsuite-enable.sh  service-launcher.c  service-launcher.h  swap_mgr.c  swap_mgr.h  udev-helper.c  udev-helper.h  (+1 more)
